# ChakraCore

./: .chakra_history  .gitignore  build.ps1  build.sh
lib/Jsrt/: CMakeLists.txt  Chakra.Jsrt.vcxproj  ChakraCore.h  ChakraFfi.h  ChakraHttpServer.h  Jsrt.cpp  JsrtChakraExtensions.cpp  JsrtCommonExports.inc  JsrtFfi.h  JsrtHttpServer.h
lib/Runtime/: LibraryFunction.h
pal/inc/: pal.h
rust/: FFI_IMPLEMENTATION.md  HTTP_SERVER_IMPLEMENTATION.md
rust/chakra_packages/: Cargo.toml  README.md
rust/chakra_packages/src/: lib.rs
rust/chakra_packages/src/common/: error.rs  ffi.rs  mod.rs
rust/chakra_packages/src/es/: mod.rs
rust/chakra_packages/src/fs/: mod.rs
rust/chakra_packages/src/info/: mod.rs
rust/chakra_packages/src/reqwest/: mod.rs
rust/es2020/: Cargo.toml
rust/es2020/src/: lib.rs
rust/es2021/: Cargo.toml
rust/es2021/src/: lib.rs
rust/ffiimpl/: Cargo.toml
rust/ffiimpl/src/: lib.rs
rust/httpserver/: Cargo.toml
rust/httpserver/src/: lib.rs
rust/runtime/: .chakra_history  Cargo.toml
rust/runtime/src/: main.rs
single_file_tests/: a.json  chakra_es_modules.js  chakra_fs_module.js  chakra_info_module.js  chakra_reqwest_download_fetch.js  chakra_reqwest_module.js  console_verbose_test.js  download_source.txt  es2021.js  ffi_example.js  http_server_example.js  https.js  math_module.js  require_node_style.js  test_option_a.js
